fix z-index in IE for SF menus in header region

--- a/css/ie-lte-9.css
+++ b/css/ie-lte-9.css
@@ -1,4 +1,15 @@
 /* Corolla < IE9 */
+#branding * {
+  display: block;
+}
+#branding,
+#logo,
+#branding hgroup {
+  float: left;
+}
+.site-name-hidden #branding hgroup {
+  clear: left;
+}
 #menu-bar ul li {
   display: block;
   float: left;
